--- a/test.html
+++ b/test.html
@@ -4,4 +4,9 @@
                 <script src="https://api.trello.com/1/client.js?key=b99ae5389293825ad224ed3a7940791c"></script>
                 <script src="script.js"></script>
         </head>
+        <body>
+                <h1 id="status"></h1>
+                <div id="lists">
+                </div>
+        </body>
 </html>
